fixed poms for refactored heirarchy

--- a/datastructure/pom.xml
+++ b/datastructure/pom.xml
@@ -5,7 +5,7 @@
   <artifactId>datastructure</artifactId>
   <version>0.0.1</version>
   <packaging>pom</packaging>
-  <name>Portfolio - Data Structures</name>
+  <name>Portfolio - Parent - Data Structures</name>
   <modules>
     <module>linked-list</module>
     <module>trie</module>
