--- a/datastructure/linked-list/pom.xml
+++ b/datastructure/linked-list/pom.xml
@@ -7,9 +7,9 @@
     <version>0.0.1</version>
   </parent>
 
-  <artifactId>trie</artifactId>
+  <artifactId>linked-list</artifactId>
 
-  <name>trie</name>
+  <name>linked-list</name>
   <!-- FIXME change it to the project's website -->
   <url>http://pages.github.com/jerryjasperson/portfolio</url>
 
