--- a/datastructure/trie/.project
+++ b/datastructure/trie/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>datastructure.trie</name>
+	<name>trie</name>
 	<comment></comment>
 	<projects>
 	</projects>
