--- a/application/boggle/pom.xml
+++ b/application/boggle/pom.xml
@@ -2,62 +2,185 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<parent>
-		<groupId>jerryjasperson.portfolio</groupId>
-		<artifactId>application-parent</artifactId>
-		<version>1.0.0</version>
-	</parent>
-	
-	<artifactId>boggle</artifactId>
+	<groupId>jerryjasperson.portfolio.boggle</groupId>
+	<artifactId>boggle-super-parent</artifactId>
 	<name>Boggle</name>
-	<description>Boggle Application</description>
+	<packaging>pom</packaging>
+	<version>1.0</version>
+	<description>Parent POM for all Boggle Applications</description>
 
-  <dependencies>
-  	<dependency>
-  		<groupId>jerryjasperson.portfolio</groupId>
-  		<artifactId>datastructure</artifactId>
-  	</dependency>
-    <dependency>
-      <groupId>org.junit.jupiter</groupId>
-      <artifactId>junit-jupiter-api</artifactId>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.junit.jupiter</groupId>
-      <artifactId>junit-jupiter-engine</artifactId>
-      <scope>test</scope>
-    </dependency>
-  </dependencies>
-  
-  <build>
+	<modules>
+		<module>boggle-core</module>
+	</modules>
+
+	<build>
 		<plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>2.5.1</version>
+                <configuration>
+                    <source>${java.version}</source>
+                    <target>${java.version}</target>
+                    <compilerArgument>-Xlint:all</compilerArgument>
+                    <showWarnings>true</showWarnings>
+                    <showDeprecation>true</showDeprecation>
+                </configuration>
+            </plugin>
 			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-compiler-plugin</artifactId>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-surefire-plugin</artifactId>
-			</plugin>
+                <artifactId>maven-eclipse-plugin</artifactId>
+                <version>2.9</version>
+                <configuration>
+                    <additionalProjectnatures>
+                        <projectnature>org.springframework.ide.eclipse.core.springnature</projectnature>
+                    </additionalProjectnatures>
+                    <additionalBuildcommands>
+                        <buildcommand>org.springframework.ide.eclipse.core.springbuilder</buildcommand>
+                    </additionalBuildcommands>
+                    <downloadSources>true</downloadSources>
+                    <downloadJavadocs>true</downloadJavadocs>
+                </configuration>
+            </plugin>
+            <plugin>
+            	<groupId>org.jacoco</groupId>
+            	<artifactId>jacoco-maven-plugin</artifactId>
+            	<version>${jacoco.maven.plugin.version}</version>
+            </plugin>
+		</plugins>
+	</build>
+	
+	<reporting>
+		<plugins>
 			<plugin>
 				<groupId>org.jacoco</groupId>
 				<artifactId>jacoco-maven-plugin</artifactId>
-				<executions>
-					<execution>
-						<id>coverage-initializer</id>
-						<goals>
-							<goal>prepare-agent</goal>
-						</goals>
-					</execution>
-					<execution>
-						<id>coverage-report</id>
-						<phase>post-integration-test</phase>
-						<goals>
-							<goal>report</goal>
-						</goals>
-					</execution>
-				</executions>
+				<reportSets>
+					<reportSet>
+						<reports>
+							<!-- select non-aggregate reports -->
+							<report>report</report>
+						</reports>
+					</reportSet>
+				</reportSets>
 			</plugin>
 		</plugins>
-  </build>
+	</reporting>
+	
+
+	<repositories>
+		<repository>
+			<id>central</id>
+			<url>http://repo1.maven.org/maven2/</url>
+			<snapshots>
+				<enabled>false</enabled>
+			</snapshots>
+			<releases>
+				<enabled>true</enabled>
+			</releases>
+		</repository>
+		<repository>
+			<id>jboss</id>
+			<name>JBoss Repository</name>
+			<url>http://repository.jboss.org/maven2</url>
+		</repository>
+		<repository>
+			<id>org.springframework.maven.release</id>
+			<name>Spring Maven Release Repository</name>
+			<url>http://maven.springframework.org/release</url>
+		</repository>
+	</repositories>
+
+	<pluginRepositories>
+		<pluginRepository>
+			<id>central</id>
+			<url>http://repo1.maven.org/maven2/</url>
+			<snapshots>
+				<enabled>false</enabled>
+			</snapshots>
+		</pluginRepository>
+	</pluginRepositories>
+
+	<dependencyManagement>
+		<dependencies>
+			<!-- Created by child modules in project -->
+		
+			<!-- Test Scope -->
+			<dependency>
+				<groupId>junit</groupId>
+				<artifactId>junit</artifactId>
+				<version>${junit.version}</version>
+				<scope>test</scope>
+			</dependency>
+			
+			<!-- Provided by container at runtime -->
+			
+			<!-- Logging stuff, cause it gets complicated really quick so let's organize here -->
+			<dependency>
+				<groupId>org.slf4j</groupId>
+				<artifactId>slf4j-api</artifactId>
+				<version>${org.slf4j.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.slf4j</groupId>
+				<artifactId>jcl-over-slf4j</artifactId>
+				<version>${org.slf4j.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.apache.logging.log4j</groupId>
+				<artifactId>log4j-api</artifactId>
+				<version>${org.apache.logging.log4j.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.apache.logging.log4j</groupId>
+				<artifactId>log4j-core</artifactId>
+				<version>${org.apache.logging.log4j.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.apache.logging.log4j</groupId>
+				<artifactId>log4j-slf4j-impl</artifactId>
+				<version>${org.apache.logging.log4j.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.apache.logging.log4j</groupId>
+				<artifactId>log4j-web</artifactId>
+				<version>${org.apache.logging.log4j.version}</version>
+				<scope>runtime</scope>
+			</dependency>
+			
+			<!-- Compile dependencies -->
+			<dependency>
+				<groupId>commons-lang</groupId>
+				<artifactId>commons-lang</artifactId>
+				<version>${commons.lang.version}</version>
+			</dependency>
+<!--
+			<dependency>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>cobertura-maven-plugin</artifactId>
+				<version>${cobertura.plugin.version}</version>
+				<scope>compile</scope>
+			</dependency>
+-->
+		</dependencies>
+	</dependencyManagement>
+
+	<!-- PLEASE KEEP THESE IN ALPHABETICAL ORDER -->
+	<properties>
+ 		<cobertura.halt.on.failure>false</cobertura.halt.on.failure>
+		<cobertura.plugin.version>2.7</cobertura.plugin.version>
+		<commons.lang.version>2.5</commons.lang.version>
+		<jacoco.maven.plugin.version>0.8.7</jacoco.maven.plugin.version>
+		<java.version>17</java.version>
+		<junit.version>4.7</junit.version>
+		<maven.jar.plugin>3.2.0</maven.jar.plugin>
+		<maven.javadoc.plugin>2.7</maven.javadoc.plugin>
+		<maven.compiler.plugin>2.3.2</maven.compiler.plugin>
+		<maven.enforcer.plugin.version>1.4</maven.enforcer.plugin.version>
+		<maven.test.skip>${env.MAVEN.TEST.SKIP}</maven.test.skip>
+		<maven.version.range>[2.2.1,3.1.0]</maven.version.range>
+		<maven.war.plugin.version>2.2</maven.war.plugin.version>
+		<org.apache.logging.log4j.version>2.2</org.apache.logging.log4j.version>
+		<org.slf4j.version>1.7.10</org.slf4j.version>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+	</properties>
 </project>
