--- a/application/boggle/pom.xml
+++ b/application/boggle/pom.xml
@@ -178,7 +178,7 @@
 		<maven.enforcer.plugin.version>1.4</maven.enforcer.plugin.version>
 		<maven.test.skip>${env.MAVEN.TEST.SKIP}</maven.test.skip>
 		<maven.version.range>[2.2.1,3.1.0]</maven.version.range>
-		<maven.war.plugin.version>2.2</maven.war.plugin.version>
+		<maven.war.plugin.version>[2.13.2,)</maven.war.plugin.version>
 		<org.apache.logging.log4j.version>2.2</org.apache.logging.log4j.version>
 		<org.slf4j.version>1.7.10</org.slf4j.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
