--- a/application/boggle/boggle-core/boggle-core-domain/pom.xml
+++ b/application/boggle/boggle-core/boggle-core-domain/pom.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd"
+	child.project.url.inherit.append.path="..">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>jerryjasperson.portfolio.boggle.core.domain</groupId>
 	<artifactId>boggle-core-domain</artifactId>
@@ -20,7 +21,7 @@
         	<plugin>
         		<groupId>org.apache.maven.plugins</groupId>
         		<artifactId>maven-jar-plugin</artifactId>
-        		<version>2.2</version>
+        		<version>3.3.0</version>
         		<executions>
         			<execution>
         				<goals>
@@ -102,6 +103,13 @@
 		</dependency>
 		-->	
 		<!-- Testing -->
+		<!--
+		<dependency>
+			<groupId>org.junit.jupiter</groupId>
+			<artifactId>junit-jupiter-engine</artifactId>
+			<version>${org.junit.jupiter.version}</version>
+		</dependency>
+		-->
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
