--- a/application/boggle/pom.xml
+++ b/application/boggle/pom.xml
@@ -18,7 +18,7 @@
 			<plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.22.0</version>
+                <version>3.2.2</version>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -28,7 +28,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>2.5.1</version>
+                <version>3.11.0</version>
                 <configuration>
                     <source>${java.version}</source>
                     <target>${java.version}</target>
@@ -39,7 +39,7 @@
             </plugin>
 			<plugin>
                 <artifactId>maven-eclipse-plugin</artifactId>
-                <version>2.9</version>
+                <version>2.10</version>
                 <configuration>
                     <additionalProjectnatures>
                         <projectnature>org.springframework.ide.eclipse.core.springnature</projectnature>
@@ -80,7 +80,7 @@
 	<repositories>
 		<repository>
 			<id>central</id>
-			<url>http://repo1.maven.org/maven2/</url>
+			<url>https://repo1.maven.org/maven2/</url>
 			<snapshots>
 				<enabled>false</enabled>
 			</snapshots>
@@ -91,19 +91,19 @@
 		<repository>
 			<id>jboss</id>
 			<name>JBoss Repository</name>
-			<url>http://repository.jboss.org/maven2</url>
+			<url>https://repository.jboss.org/maven2</url>
 		</repository>
 		<repository>
 			<id>org.springframework.maven.release</id>
 			<name>Spring Maven Release Repository</name>
-			<url>http://maven.springframework.org/release</url>
+			<url>https://maven.springframework.org/release</url>
 		</repository>
 	</repositories>
 
 	<pluginRepositories>
 		<pluginRepository>
 			<id>central</id>
-			<url>http://repo1.maven.org/maven2/</url>
+			<url>https://repo1.maven.org/maven2/</url>
 			<snapshots>
 				<enabled>false</enabled>
 			</snapshots>
@@ -115,13 +115,20 @@
 			<!-- Created by child modules in project -->
 		
 			<!-- Test Scope -->
+			<!-- JUnit 5 
+			<dependency>
+				<groupId>org.junit.jupiter</groupId>
+				<artifactId>junit-jupiter-enginer</artifactId>
+				<version>${org.junit.jupiter.version}</version>
+				<scope>test</scope>
+			</dependency>
+			-->
 			<dependency>
 				<groupId>junit</groupId>
 				<artifactId>junit</artifactId>
 				<version>${junit.version}</version>
 				<scope>test</scope>
 			</dependency>
-			
 			<!-- Provided by container at runtime -->
 			
 			<!-- Logging stuff, cause it gets complicated really quick so let's organize here -->
@@ -179,9 +186,10 @@
  		<cobertura.halt.on.failure>false</cobertura.halt.on.failure>
 		<cobertura.plugin.version>2.7</cobertura.plugin.version>
 		<commons.lang.version>2.5</commons.lang.version>
-		<jacoco.maven.plugin.version>0.8.7</jacoco.maven.plugin.version>
+		<jacoco.maven.plugin.version>0.8.11</jacoco.maven.plugin.version>
 		<java.version>17</java.version>
-		<junit.version>4.7</junit.version>
+		<org.junit.jupiter.version>5.10.1</org.junit.jupiter.version>
+		<junit.version>4.12</junit.version>
 		<maven.jar.plugin>3.2.0</maven.jar.plugin>
 		<maven.javadoc.plugin>2.7</maven.javadoc.plugin>
 		<maven.compiler.plugin>2.3.2</maven.compiler.plugin>
